# point_lio

./: CMakeLists.txt  README.md
config/: avia.yaml  horizon.yaml  mid360.yaml  ouster64.yaml  velody16.yaml
include/: common_lib.h  matplotlibcpp.h  so3_math.h
include/IKFoM/IKFoM_toolkit/esekfom/: esekfom.hpp  util.hpp
include/IKFoM/IKFoM_toolkit/mtk/: build_manifold.hpp  startIdx.hpp
include/IKFoM/IKFoM_toolkit/mtk/src/: SubManifold.hpp  mtkmath.hpp  vectview.hpp
include/IKFoM/IKFoM_toolkit/mtk/types/: S2.hpp  SEn.hpp  SOn.hpp  vect.hpp  wrapped_cv_mat.hpp
include/ivox/: eigen_types.h  hilbert.hpp  ivox3d.h  ivox3d_node.hpp
launch/: point_lio.launch.py
src/: Estimator.cpp  Estimator.h  IMU_Processing.cpp  IMU_Processing.h  laserMapping.cpp  li_initialization.cpp  li_initialization.h  parameters.cpp  parameters.h  preprocess.cpp  preprocess.h
